[gd_scene load_steps=17 format=3 uid="uid://cu7ile13mqjn2"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_uwui3"]
[ext_resource type="Texture2D" uid="uid://cc60q0nys63y4" path="res://assets/textures/sprites.png" id="1_xt31b"]
[ext_resource type="Texture2D" uid="uid://dgh3js4ws0tm6" path="res://resources/sprite/red.atlastex" id="3_u3b2n"]
[ext_resource type="Texture2D" uid="uid://es4rh8d3onvu" path="res://resources/sprite/yellow.atlastex" id="4_bqnft"]
[ext_resource type="Texture2D" uid="uid://cbejhslhwxckq" path="res://resources/sprite/green.atlastex" id="5_ssmtw"]

[sub_resource type="InputEventKey" id="InputEventKey_d0dfw"]
device = -1
keycode = 4194306

[sub_resource type="Shortcut" id="Shortcut_xsh78"]
events = [SubResource("InputEventKey_d0dfw")]

[sub_resource type="AtlasTexture" id="AtlasTexture_sh0ee"]
atlas = ExtResource("1_xt31b")
region = Rect2(264, 312, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_54f1i"]
atlas = ExtResource("1_xt31b")
region = Rect2(360, 408, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfx34"]
atlas = ExtResource("1_xt31b")
region = Rect2(264, 408, 96, 96)

[sub_resource type="LabelSettings" id="LabelSettings_hiog1"]
font_size = 26
outline_size = 17
outline_color = Color(0.148989, 0.148989, 0.148989, 1)

[sub_resource type="Gradient" id="Gradient_ra7nl"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.148989, 0.148989, 0.148989, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_mv0fl"]
gradient = SubResource("Gradient_ra7nl")
width = 48
height = 12

[sub_resource type="Gradient" id="Gradient_q53n8"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_087ao"]
gradient = SubResource("Gradient_q53n8")
width = 10

[sub_resource type="AtlasTexture" id="AtlasTexture_u2gvj"]
atlas = SubResource("GradientTexture1D_087ao")
region = Rect2(0, 0, 40, 4)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_uwui3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="OpenMenuButton" type="TextureButton" parent="MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
tooltip_text = "Open spell book"
shortcut = SubResource("Shortcut_xsh78")
texture_normal = SubResource("AtlasTexture_sh0ee")
texture_pressed = SubResource("AtlasTexture_54f1i")
texture_hover = SubResource("AtlasTexture_vfx34")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = 12

[node name="Control1" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_constants/separation = 0

[node name="Leave1Label" type="Label" parent="MarginContainer/HBoxContainer/Control1"]
unique_name_in_owner = true
layout_mode = 2
text = "10"
label_settings = SubResource("LabelSettings_hiog1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect1" type="TextureRect" parent="MarginContainer/HBoxContainer/Control1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 40)
layout_mode = 2
texture = ExtResource("3_u3b2n")

[node name="TextureProgressBar1" type="TextureProgressBar" parent="MarginContainer/HBoxContainer/Control1"]
unique_name_in_owner = true
layout_mode = 2
max_value = 9.0
value = 9.0
texture_under = SubResource("GradientTexture2D_mv0fl")
texture_progress = SubResource("AtlasTexture_u2gvj")
texture_progress_offset = Vector2(4, 4)
tint_over = Color(1, 1, 1, 0.317647)
tint_progress = Color(0.566705, 0.824429, 0.911904, 1)

[node name="Control2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_constants/separation = 0

[node name="Leave2Label" type="Label" parent="MarginContainer/HBoxContainer/Control2"]
unique_name_in_owner = true
layout_mode = 2
text = "10"
label_settings = SubResource("LabelSettings_hiog1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/HBoxContainer/Control2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 40)
layout_mode = 2
texture = ExtResource("4_bqnft")

[node name="TextureProgressBar2" type="TextureProgressBar" parent="MarginContainer/HBoxContainer/Control2"]
unique_name_in_owner = true
layout_mode = 2
max_value = 9.0
value = 9.0
texture_under = SubResource("GradientTexture2D_mv0fl")
texture_progress = SubResource("AtlasTexture_u2gvj")
texture_progress_offset = Vector2(4, 4)
tint_progress = Color(0.566705, 0.824429, 0.911904, 1)

[node name="Control3" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_constants/separation = 0

[node name="Leave3Label" type="Label" parent="MarginContainer/HBoxContainer/Control3"]
unique_name_in_owner = true
layout_mode = 2
text = "10"
label_settings = SubResource("LabelSettings_hiog1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/HBoxContainer/Control3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 40)
layout_mode = 2
texture = ExtResource("5_ssmtw")

[node name="TextureProgressBar3" type="TextureProgressBar" parent="MarginContainer/HBoxContainer/Control3"]
unique_name_in_owner = true
layout_mode = 2
max_value = 9.0
value = 9.0
texture_under = SubResource("GradientTexture2D_mv0fl")
texture_progress = SubResource("AtlasTexture_u2gvj")
texture_progress_offset = Vector2(4, 4)
tint_over = Color(1, 1, 1, 0.317647)
tint_progress = Color(0.566705, 0.824429, 0.911904, 1)
